--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -3,8 +3,9 @@
         <div class="f-info-social">
             <i class="fa-brands fa-square-facebook"></i>
             <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-linkedin"></i>
         </div>
-        <div>WanderLand Private Limited</div>
+        <div class="f-info-brands"> &copy; WanderLand Private Limited</div>
         <div class="f-info-links">
             <a href="/privacy">Privacy</a>
             <a href="/terms">Terms</a>
